--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "chokidar": "^3.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "nunjucks": "^3.2.4",
     "path": "^0.12.7",
-    "winston": "^3.14.2"
+    "winston": "^3.15.0"
   }
 }
