--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,24 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.3",
     "nunjucks": "^3.2.4",
-    "path": "^0.12.7",
-    "winston": "^3.15.0"
-  }
+    "winston": "^3.14.2"
+  },
+  "name": "app",
+  "version": "1.0.0",
+  "main": "app.js",
+  "bin": {
+    "app": "bin/www.js"
+  },
+  "scripts": {
+    "start": "nodemon ./bin/www.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
+  "description": ""
 }
