--- a/app/package.json
+++ b/app/package.json
@@ -15,5 +15,19 @@
     "nunjucks": "^3.2.4",
     "path": "^0.12.7",
     "winston": "^3.15.0"
-  }
+  },
+  "name": "app",
+  "version": "1.0.0",
+  "main": "app.js",
+  "bin": {
+    "app": "bin/www.js"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./bin/www.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
